fixed defaultProPics not showing properly

--- a/client/src/Components/ChatList.scss
+++ b/client/src/Components/ChatList.scss
@@ -65,6 +65,8 @@
 
     &__propic-container {
         display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
         left: 10px;
         width: 3.2em;
@@ -101,8 +103,9 @@
 
     &__default-propic {
         position: relative;
-        top: 4px;
-        width: 2.2em;
+        top: 3px;
+        width: 75%;
+        height: 75%;
         border-radius: 30%;
     }
 
